Wed Nov 19 12:02:24 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: New distance2()
	static method to compute squared distance between 2 points.
	* src/org/jcae/mesh/amibe/projection/LocalSurfaceProjection.java:
	New interface to implement surface approximation.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java
	  src/org/jcae/mesh/amibe/algos3d/SplitEdge.java
	  src/org/jcae/mesh/amibe/ds/Vertex.java:  Move surface approximation
	by quadrics from Vertex and SmoothNodes3D...
	* src/org/jcae/mesh/amibe/projection/QuadricProjection.java: ...here.

Wed Nov 19 11:47:37 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Fix centroid
	computation, it was sometimes wrong.

Sun Oct 19 15:59:19 UTC 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java: Fix NullPointerException when
	converting to triangle soup without running other passes first.

Mon Jun 23 18:01:40 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/patch/Vertex2D.java: Rename inCircleTest2()
	into inCircle2D() and inCircleTest3() into inCircle().

Wed Jun  4 17:47:59 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: New sqrDistance3D() method
	to eliminate calls to Math.sqrt when possible.

Tue Jun  3 15:22:37 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: Replace getNeighboursNodes()
	by a new getNeighbourIteratorVertex() method which returns an
	Iterator<Vertex>. Also provide methods to return incident edges
	and triangles.

Thu May 22 10:51:39 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/MeshReader.java: Fix NullPointerException
	in buildMesh() when adjacency relations are requested.

Wed Mar 26 13:26:57 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
