@@ -1,3 +1,8 @@
+Thu Nov 20 14:01:56 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/Mesh.java: In buildAdjacency(), ensure
+	that boundary nodes have a non-null ref1d member.
+
 Wed Nov 19 12:02:24 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: New distance2()
